@@ -2,7 +2,7 @@
 <project name="Slimscrollbar" default="build">
 
 	<!-- properties and fileset -->
-	<property name="ver_num" value="0.9"/>
+	<property name="ver_num" value="0.9-2"/>
 	<property name="ext_name" value="slimscrollbar"/>
 	<fileset id="propdeps" dir="src/" casesensitive="yes">
 		<!-- files to overwrite also if not newer because contains a property maybe to refresh -->
@@ -33,7 +33,7 @@
 	<target name="oex" description="make oex" depends="build">
 
 		<delete file="${ext_name}" />
-		<zip destfile="${ext_name].oex" basedir="build" />
+		<zip destfile="${ext_name}.oex" basedir="build" />
 
 	</target>
 
