@@ -1,0 +1,17 @@
+"Slim Scrollbar." : ""
+
+"A scrollbar with auto-hide" : ""
+
+"Slim Scrollbar replace default scroll bars with two simple auto-hide bars. These bars are visible only when you scroll the page. So you obtain more space, useful especially for small screens.
+
+ATTENTION:
+The extension can't automatically turn off the default scrollbars. To do so, open Preferences ▹ Advanced ▹ browsing, and deactivate "show scroll bars".
+
+A well-know issue on oldest computers is performance degredation during scrolling. You can try to activate "solve slow scrolling" options, but this may result in the scrollbars flickering.
+
+If you want to translate this extension you can email me or visit support page.
+
+Thanks to Daniel (https://twitter.com/#!/Aeyoun) for the Norwegian bokmål translation and code support.
+Thanks to Piotr Wójcik (http://my.opera.com/chocimir) for polish translation."  : ""
+
+"polish translation" : ""
