@@ -1,0 +1,20 @@
+var strings = {
+	"by Damage92" : "",
+	"Bars color" : "",
+	"color of the bars" : "",
+	"Border color" : "",
+	"bar's border color" : "",
+	"Size" : "",
+	"the size of the bars" : "",
+	"Solve slow scrolling" : "",
+	"use this option if you are experiencing slow scrolling" : "",
+	"Auto hide" : "",
+	"auto hide the scrollbars after a few seconds" : "",
+	"View bar only when mouse is over it" : "",
+	"version" : "",
+	"default value": "",
+	"General options:" : "",
+	"Bar apparence:" : "",
+	"To turn off the default scroll bar go in Opera → Preferences → Advanced → Browsing, deactivate “Show scrollbars”." : "",
+	"To turn off the default scroll bar go in Settings → Preferences → Advanced → Browsing, deactivate “Show scrollbars”." : ""
+};
