@@ -66,7 +66,7 @@ function load() {
 
 	document.title = _("Slim Scrollbar options page");
 	
-	document.getElementById("cont").innerHTML += "<p class=\"header\">Slim Scrollbar <span style=\"font-size:13px\">"+_("version")+" 0.8-6</span><br><a href=\"http://stylecode.altervista.org\" style=\"font-size:15px\">"+_("by Damage92")+"</a></p>";
+	document.getElementById("cont").innerHTML += "<p class=\"header\">Slim Scrollbar <span style=\"font-size:13px\">"+_("version")+" #ver_num#</span><br><a href=\"http://stylecode.altervista.org\" style=\"font-size:15px\">"+_("by Damage92")+"</a></p>";
 
 	if ( (navigator.platform == "Mac") || (navigator.platform == "MacIntel") )
 		document.getElementById("cont").innerHTML += "<b>"+_("To turn off the default scroll bar go in Opera → Preferences → Advanced → Browsing, deactivate “Show scrollbars”.")+"</b><br>";
