@@ -44,3 +44,4 @@ Update 0.8-4
 
 NEXT VERSION:
 excluded docs.google.it
+polish translation
